# LearnOpengl

./: 3.3.shader.frag  3.3.shader.vert  CMakeLists.txt  camera.cpp  camera.hpp  debug.cpp  debug.hpp  gourand.frag  gourand.vert  lightSourceShader.frag  lightingShader.frag  main.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  shader.cpp  shader.hpp
.cache/clangd/index/: camera.cpp.79CD81972B5E170F.idx  camera.hpp.7DC906BAAD8BCA59.idx  debug.cpp.9BEB1647BAA50415.idx  debug.hpp.5F9520094E498313.idx  glad.c.450782BC6DC95132.idx  glm_test.cpp.105B738A48887E1E.idx  main.cpp.5AF36AA1BEEF9389.idx  mesh.cpp.84784E0ACA90C06A.idx  mesh.hpp.221223F32F0EC3B0.idx  model.cpp.8A8D57AB0BE69A42.idx  model.hpp.C75E106FF43FE346.idx  shader.cpp.C56DA5D71B330242.idx  shader.hpp.3CFC9B83960B301D.idx  stb_image.h.C322B51C6E71380A.idx
